-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 7.0.17
-
Component/s: Internal Code
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
ClusterScalability Mar31-Apr14, ClusterScalability Apr14-Apr28
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Data race condition
The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
/src/mongo/db/s/migration_destination_manager.cpp:1660: MISSING_LOCK 170234 Accessing "this->this->_txnNumber" without holding lock "mongo::MigrationDestinationManager._mutex". Elsewhere, "mongo::MigrationDestinationManager._txnNumber" is written to with "MigrationDestinationManager._mutex" held 2 out of 2 times.
- is duplicated by
-
SERVER-108617 Coverity analysis defect 157070: Data race condition
-
- Closed
-
-
SERVER-108618 Coverity analysis defect 157069: Data race condition
-
- Closed
-