SERVER-102264 Hold mutex while persisting migration recipient recovery document (#33743)

GitOrigin-RevId: d71f50e97c2d0c38f42f2f49f74f794bd191b814